[tool.poetry]
name = "finetuner"
version = "0.1.0"
description = ""
authors = ["hundredeuk2 <leehd1995@gmail.com>"]
readme = "README.md"
packages = [{include = "finetuner", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.2.2"
transformers = "^4.45"
datasets = "2.18.0"
accelerate = "0.29.3"
evaluate = "0.4.1"
bitsandbytes = "0.43.1"
huggingface-hub = "^0.23.2"
trl = "0.8.6"
peft = "0.10.0"
pybind11 = "^2.13.6"
numpy = "1.24.1"
wandb = "^0.18.5"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
